--- a/product-details.html
+++ b/product-details.html
@@ -411,7 +411,7 @@
                         <li>
                             <a href="index.html">Home</a>
                         </li>
-                        <li class="active">product details </li>
+                        <li class="active">product details 2</li>
                     </ul>
                 </div>
             </div>
@@ -419,9 +419,9 @@
         <div class="product-details-area pt-120 pb-115">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-6">
+                    <div class="col-lg-6 col-md-12">
                         <div class="product-details-tab">
-                            <div class="pro-dec-big-img-slider">
+                            <div class="product-dec-right pro-dec-big-img-slider">
                                 <div class="easyzoom-style">
                                     <div class="easyzoom easyzoom--overlay">
                                         <a href="assets/images/product-details/b-large-1.jpg">
@@ -463,7 +463,7 @@
                                     <a class="easyzoom-pop-up img-popup" href="assets/images/product-details/b-large-2.jpg"><i class="icon-size-fullscreen"></i></a>
                                 </div>
                             </div>
-                            <div class="product-dec-slider-small product-dec-small-style1">
+                            <div class="product-dec-left product-dec-slider-small-2 product-dec-small-style2">
                                 <div class="product-dec-small active">
                                     <img src="assets/images/product-details/small-1.jpg" alt="">
                                 </div>
@@ -482,8 +482,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-6 col-md-6">
-                        <div class="product-details-content pro-details-content-mrg">
+                    <div class="col-lg-6 col-md-12">
+                        <div class="product-details-content pro-details-content-mt-md">
                             <h2>Simple Black T-Shirt</h2>
                             <div class="product-ratting-review-wrap">
                                 <div class="product-ratting-digit-wrap">
