--- a/shop.html
+++ b/shop.html
@@ -127,7 +127,7 @@
                                             </li>
                                             <li><a href="blog.html">BLOG </a>
                                             </li>
-                                            <li><a href="contact.html">ABOUT</a></li>
+                                            <li><a href="about-us.html">ABOUT</a></li>
                                             <li><a href="contact.html">CONTACT</a></li>
                                         </ul>
                                     </nav>
